FlightPath 6.x Changelog
========================


2021-07-30
  Fixed bug in Calendar with Upcoming Appointments still not showing "today" and "tomorrow" appointments correctly.  Went with different approach.

2021-07-29
  Fixed deprecated notice.
  
  Calendar bug left in from dev-- it was not preventing students from clicking "back" and saving a second time.
  
  Added "spinner" attribute to button for confirm appointment and save.
  
  Added ICS attachment to notifications for student-initiated appointments.
  
  Removed dev code for external calendars.
  
  Added new code for caching external calendars for at least 5 minutes, to save frequent lookups.
  
  Added new code for Course objects, to keep track of all the semesters it appears in.  Good for combo-degrees.
  

2021-07-28
  Fixed bug in calendar's upcoming appointments tab, wasn't showing date ranges correctly for timezones.
  
  Added ability to handle attachments to fp_mail(), as well as string attachments to smtp module.
  
  Added ability to send attachments (string method) with notifications by email.
  
  Added new property that can be added to form elements (like submit buttons), "spinner" => TRUE.  This
  will cause a spinning graphic to appear when the button is pressed, and the button to disable itself so it
  cannot be pressed more than once.
  
  Made it so all "content" forms use the spinner property for their submit buttons.
  

2021-07-27
  Implemented check when searching for students, to make sure user has correct permissions to search for student in particular school.
  
  Added ability to trim only DEBUG messages from the watchdog.

  Added ability to have external CSS files.  This is now a setting in System Settings, under the theme section.

  Added default favicon to fp6_clean theme.
  

2021-07-26
  Fixed bug when editing groups, where school_id was not correctly being loaded.

  Fixed bug in group definitions and group course repeats, where FP was not respecting the school_id.
  